tests/paczka2/big_fuzzy/85431281.err
Error in line 4: 4nR S84 48,1
Error in line 5: 4nR S260 70,6
Error in line 21: vmf S181 77,5
Error in line 30: Xr5 A832 53,65
Error in line 48: 4nR S84 93,0
Error in line 25: vmf S260 39,4
Error in line 50: 4nR A832 19,1
Error in line 63: S84 S260 33,19
Error in line 39: ewKrsRW S260 85,7
Error in line 64: ewKrsRW A832 37,1
Error in line 78: ALQOZXnsLdJ A832 142,7
Error in line 52: vmf A832 35,6
Error in line 80: S84 S260 148,8
Error in line 81: ewKrsRW S181 99,3
Error in line 102: ewKrsRW A832 75,5
Error in line 108: 4nR A832 85,1
Error in line 116: S84 S181 24,4
Error in line 122: S84 S84 88,7
Error in line 127: Xr5 S84 93,8
Error in line 134: ALQOZXnsLdJ S260 -4,0
Error in line 128: S84 S84 29,0
Error in line 105: ALQOZXnsLdJ S260 99,3
Error in line 153: vmf S84 42,3
Error in line 156: 4nR S260 62,6
Error in line 158: 4nR S181 15,8
Error in line 187: vmf S84 52,3
Error in line 203: ewKrsRW A832 32,1
Error in line 202: tWiKZ9 S181 4,4
Error in line 226: tWiKZ9 S260 91,8
Error in line 223: ewKrsRW S84 36,8
Error in line 228: ewKrsRW A832 85,4
Error in line 227: tWiKZ9 S181 89,4
Error in line 244: ewKrsRW S181 67,2
Error in line 234: tWiKZ9 S260 91,9
